# bushido

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  splitLayout.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/adblock/: build-resources.mjs  encode-helper.js  generate-resources.js  peter-lowe.txt  scriptlet-resources.json
src-tauri/capabilities/: default.json
src-tauri/forks/tauri/: Cargo.toml
src-tauri/forks/tauri-runtime/: Cargo.toml
src-tauri/forks/tauri-runtime-wry/: Cargo.toml
src-tauri/forks/tauri-runtime-wry/src/: lib.rs  webview.rs
src-tauri/forks/tauri-runtime-wry/src/dialog/: mod.rs  windows.rs
src-tauri/forks/tauri-runtime-wry/src/monitor/: macos.rs  mod.rs  windows.rs
src-tauri/forks/tauri-runtime/src/: dpi.rs  monitor.rs  webview.rs
src-tauri/forks/tauri/permissions/webview/autogenerated/: reference.md
src-tauri/forks/tauri/permissions/window/autogenerated/: reference.md
src-tauri/forks/tauri/scripts/: core.js
src-tauri/forks/tauri/src/event/: init.js  mod.rs  plugin.rs
src-tauri/forks/tauri/src/image/: mod.rs
src-tauri/forks/tauri/src/ipc/: authority.rs  capability_builder.rs  command.rs  format_callback.rs  protocol.rs
src-tauri/forks/tauri/src/manager/: tray.rs
src-tauri/forks/tauri/src/menu/: plugin.rs  submenu.rs
src-tauri/forks/tauri/src/menu/builders/: menu.rs
src-tauri/forks/tauri/src/plugin/: mobile.rs
src-tauri/forks/tauri/src/protocol/: isolation.rs
src-tauri/forks/tauri/src/resources/: mod.rs
src-tauri/forks/tauri/src/scope/: fs.rs
src-tauri/forks/tauri/src/tray/: plugin.rs
src-tauri/forks/tauri/src/webview/: mod.rs  plugin.rs
src-tauri/forks/tauri/src/window/: plugin.rs
src-tauri/forks/wry/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig
src-tauri/forks/wry/src/: lib.rs
src-tauri/forks/wry/src/webview2/: mod.rs
src-tauri/forks/wry/src/wkwebview/: mod.rs
src-tauri/icons/: icon.icns
src-tauri/src/: blocker.rs  content_blocker.js  cookie_blocker.js  cosmetic_observer.js  crash_log.rs  dns_resolver.rs  downloads.rs  fingerprint.js  fingerprint_verify.js  glance_listener.js  import.rs  lib.rs  link_preload.js  main.rs  media_listener.js  screenshot.rs  scriptlet_preamble.js  shortcut_bridge.js  vault.rs  vault_autofill.js
src-tauri/src/sync/: discovery.rs  keys.rs  loro_doc.rs  mod.rs  noise.rs  pairing.rs  protocol.rs  sync_doc.rs  sync_engine.rs
src-tauri/tests/: dns_test.py  fingerprint_test.py
src/components/: AnnotationEditor.tsx  CommandPalette.tsx  DownloadPanel.tsx  FindBar.tsx  GlanceOverlay.tsx  HistoryPanel.tsx  NetworkPanel.tsx  NewTabPage.tsx  Onboarding.tsx  PairingWizard.tsx  ScreenshotOverlay.tsx  SettingsPage.tsx  ShareMenu.tsx  Sidebar.tsx  SplitOverlay.tsx  Toolbar.tsx  WebviewPanel.tsx
src/store/: dataStore.ts  featureStore.ts  index.ts  storeTypes.ts  syncStore.ts  tabStore.ts  uiStore.ts  vaultStore.ts
src/styles/: global.css
