[package]
name = "bushido-browser"
version = "0.0.1"
description = "Bushido Browser"
authors = [""]
edition = "2021"

[lib]
name = "bushido_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
url = "2"
