[package]
name = "bushido-browser"
version = "0.7.0"
description = "Bushido Browser"
authors = [""]
edition = "2021"

[lib]
name = "bushido_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
url = "2"
adblock = { version = "0.12", default-features = false, features = ["embedded-domain-resolver", "full-regex-handling"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tokio = { version = "1", features = ["fs", "macros"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_System_Com"] }
